2007-03-26  SIGOURE Benoit  <tsuna@lrde.epita.fr>

	Fix portability on Win32.
	* src/network/bsdnet/network.cc: Don't use in_addr_t, use uint32_t
	instead.

2007-03-26  SIGOURE Benoit  <tsuna@lrde.epita.fr>

	Fix a bug introduced in r1014.
	* src/network/bsdnet/network.cc (TCPServerPipe::init): Properly
	transform the IP address returned by gethostbyname into a in_addr_t.

2007-03-24  SIGOURE Benoit  <tsuna@lrde.epita.fr>

	Fix bug #146 (compilation on ARM): memory alignment and bad code.
	* src/network/bsdnet/network.cc (TCPServerPipe::init): Fix wrong usage
	of the struct hostent returned by gethostbyname: the code was
	converting a char* representing an IP address (eg: "127.0.0.1") in
	int* and then dereferencing this int in hope to get the numerical IP
	address. oO
	* src/uvalue.cc (UValue::operator urbi::USound): Declare the local
	`struct wavheader' as __attribute__ __packed__.  A raw buffer of bytes
	is casted in a pointer to struct wavheader, this requires that the
	compiler does not align the members of the structure on word
	boundaries.

2007-03-23  Akim Demaille  <demaille@gostai.com>

	Fix #114 and #141
	* src/ucommand.hh, src/ucommand.cc (UCommand_NOOP::kind)
	(UCommand_NOOP::kind_): New.
	Adjust dependencies.
	* src/parser/bison/ugrammar.y (spontaneous, warn, warn_spontaneous):
	New.
	Use the latter to warn about suspicious empty instructions instead
	of making them hard error.
	No longer create an instruction equal to 0, rather make it a
	spontaneous noop.

2007-03-23  Akim Demaille  <demaille@gostai.com>

	Fix #144
	* src/parser/uparser.cc: Debug trace changes.
	* src/ucommandqueue.hh, src/ucommandqueue.cc (bracketlevel_)
	(sbracketlevel_, parenlevel_): Remove.  Replaced by...
	(closers_): this new member.
	Let the members be private, not protected.
	(popCommand): When a closing mismatch happens, return the sentence
	to the parser which will report the error.

	* src/userver.cc: Reoder two instructions.
